--- a/src/app/cardholder/cardholder.component.html
+++ b/src/app/cardholder/cardholder.component.html
@@ -1,1 +1,17 @@
-<div class="cardholder"></div>
+<div class="cardholder">
+    <div class="card card--material">
+      <img src="../../assets/img/dummy.jpg" class="card-image"/>
+      <div class="card__title card--material__title" >Card Title</div>
+      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    </div>
+    <div class="card card--material">
+      <img src="../../assets/img/dummy.jpg" class="card-image"/>
+      <div class="card__title card--material__title" >Card Title</div>
+      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    </div>
+    <div class="card card--material">
+      <img src=""/>
+      <div class="card__title card--material__title" >Card Title</div>
+      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    </div>
+</div>
