--- a/src/app/cardholder/cardholder.component.html
+++ b/src/app/cardholder/cardholder.component.html
@@ -1,17 +1,28 @@
 <div class="cardholder">
-    <div class="card card--material">
-      <img src="../../assets/img/dummy.jpg" class="card-image"/>
-      <div class="card__title card--material__title" >Card Title</div>
-      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    <div class="toolbar">
+      <div class="toolbar__center">
+        <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
+      </div>
     </div>
-    <div class="card card--material">
-      <img src="../../assets/img/dummy.jpg" class="card-image"/>
-      <div class="card__title card--material__title" >Card Title</div>
-      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-    </div>
-    <div class="card card--material">
-      <img src=""/>
-      <div class="card__title card--material__title" >Card Title</div>
-      <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    <div class="card-scroller">
+      <div class="card card--material">
+        <img src="../../assets/img/dummy.jpg" class="card-image"/>
+        <div class="card__title card--material__title" >Card Title</div>
+        <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <div class="card card--material">
+        <img src="../../assets/img/dummy.jpg" class="card-image"/>
+        <div class="card__title card--material__title" >Card Title</div>
+        <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <div class="card card--material">
+        <div class="card__title card--material__title" >Card Title</div>
+        <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
+      <div class="card card--material">
+        <img src="../../assets/img/dummy.jpg" class="card-image"/>
+        <div class="card__title card--material__title" >Card Title</div>
+        <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      </div>
     </div>
 </div>
