--- a/src/app/cardholder/cardholder.component.css
+++ b/src/app/cardholder/cardholder.component.css
@@ -1,17 +1,19 @@
-.cardholder {
-    width: 25%;
-    height: 80%;
-    background-color: #190847;
-    border-radius: 10px;
-    margin: 2em 2em;
-    overflow: hidden;
+.card-viewer {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: horizontal;
+    justify-content: center;
+    align-items: center;
 }
 
-.card-scroller {
-    height: 90%;
-    width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+.cardholder {
+    width: 27%;
+    height: 100%;
+    background-color: #190847;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 2em;
 }
 
 .toolbar {
@@ -23,6 +25,13 @@
     height: 80%;
     width: auto;
     margin: auto 0;
+}
+
+.card-scroller {
+    height: 90%;
+    width: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .card {
@@ -38,18 +47,18 @@
 ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
-    }
-    
-    ::-webkit-scrollbar-track {
+}
+
+::-webkit-scrollbar-track {
     border: 1px solid #c4cfcf;
     border-radius: 10px;
-    }
-    
-    ::-webkit-scrollbar-thumb {
+}
+
+::-webkit-scrollbar-thumb {
     background: #c4cfcf;  
     border-radius: 10px;
-    }
-    
-    ::-webkit-scrollbar-thumb:hover {
+}
+
+::-webkit-scrollbar-thumb:hover {
     background: #c4cfcf;  
-    }
+}
