--- a/src/app/cardholder/cardholder.component.css
+++ b/src/app/cardholder/cardholder.component.css
@@ -1,8 +1,8 @@
 .card-viewer {
-    width: 100%;
+    width: auto;
     height: 85%;
     display: flex;
-    flex-direction: horizontal;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -13,7 +13,20 @@
     background-color: #190847;
     border-radius: 10px;
     overflow: hidden;
-    margin: 0 2em;
+    margin: 0 1.5em;
+}
+
+@media (max-width: 600px) {
+    .card-viewer {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .cardholder {
+        margin: 1em 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .toolbar {
