--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,14 +54,13 @@
         </label>
     </div> -->
 
-
 <main>
   
   <input id="tab1" type="radio" name="tabs" checked>
   <label for="tab1">test</label>
     
   <input id="tab2" type="radio" name="tabs">
-  <label for="tab2">test</label>
+  <label for="tab2"></label>
     
   <input id="tab3" type="radio" name="tabs">
   <label for="tab3">test</label>
@@ -71,7 +70,7 @@
     
   <section id="content1">
     <p>
-       
+      this 
     </p>
     <p>
       Brisket meatball turkey short loin boudin leberkas meatloaf chuck andouille pork loin pastrami spare ribs pancetta rump. Frankfurter corned beef beef tenderloin short loin meatloaf swine ground round venison.
