--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,13 +4,15 @@
     /* justify-content: center; */
     align-items: center;
     padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 3px;
 }
 
 input[type=text] {
     width: 200px;
     box-sizing: border-box;
     border: 2px solid #ccc;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     font-size: 16px;
     background-color: white;
     background-position: 10px 10px; 
@@ -24,7 +26,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-    width: 60%;
+    width: 100%;
     text-align: left;
 }
 
@@ -32,9 +34,9 @@ button[type=submit] {
     box-sizing: border-box;
     width: 50px;
     border: 2px solid #ccc;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     font-size: 16px;
-    background-color: white;
+    background-color: #ccc;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 15px 12px 15px;
@@ -46,7 +48,6 @@ button[type=submit] {
 }
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 *, *:before, *:after {
   margin: 0;
@@ -87,6 +88,7 @@ section {
   display: none;
   padding: 20px 0 0;
   border-top: 1px solid #ddd;
+  overflow: scroll;
 }
 
 input {
