--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -54,6 +54,10 @@ button[type=submit] {
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100vh;
+}
+
 body {
   font: 14px/1 'Open Sans', sans-serif;
   color: #555;
@@ -72,12 +76,11 @@ p {
 }
 
 main {
-  height: 100%;
-  width: 100%;
+  min-width: 320px;
+  max-width: 800px;
   padding: 50px;
   margin: 0 auto;
   background: #fff;
-  overflow: hidden;
 }
 
 section {
