--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 body {
     background-color: rgba(0, 0, 0, 0.05);
+    overflow: scroll;
+    font: 14px/1 'Open Sans', sans-serif;
+    color: #555;
+    background: #eee;
 }
