--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,58 +3,6 @@
     <button type="submit"><i class="fa fa-search"></i></button>
 </form><br>
 
-    <!-- <div class="tabbar tabbar--top tabbar--material">
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a" checked="checked">
-          <button class="tabbar__button tabbar--material__button" style="background-color: rgba(0, 0, 0, 0.4);">
-            All
-          </button>
-        </label>
-
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button" style="background-color: rgba(0, 131, 179, 0.5);">
-            <img src="https://png.icons8.com/metro/1600/twitter.png" style="width: 50px; height: auto;">
-          </button>
-        </label>
-
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button" style="background-color: rgba(222, 208, 192, 0.5);">
-            <img src="https://png.icons8.com/metro/1600/instagram.png" style="width: 45px; height: auto; padding-top: 3px">
-          </button>
-        </label>
-      
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button" style="background-color: rgba(255, 68, 0, 0.5);">
-            <img src="https://png.icons8.com/metro/1600/reddit.png" style="width: 50px; height: auto;">
-          </button>
-        </label>
-      
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button">
-            <img src="http://files.softicons.com/download/system-icons/windows-8-metro-invert-icons-by-dakirby309/ico/Internet%20Shortcuts%20&%20Manufacturers/The%20New%20York%20Times%20alt.ico"  style="width: 50px; height: auto;">
-          </button>
-        </label>
-
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button">
-            <img src="http://www.chicano.ucla.edu/files/styles/large/public/LA%20Times.png?itok=5iKq_3Qq"  style="width: 50px; height: auto;">
-          </button>
-        </label>
-       
-        <label class="tabbar__item tabbar--material__item">
-          <input type="radio" name="tabbar-material-a">
-          <button class="tabbar__button tabbar--material__button" style="background-color: rgba(0, 0, 0, 0.9);">
-            <img src="http://www.racetonowhere.com/sites/default/files/icon-wapo_0.png"  style="width: 50px; height: auto;">
-          </button>
-        </label>
-    </div> -->
-
-
 <main>
   
   <input id="tab1" type="radio" name="tabs" checked>
@@ -70,12 +18,92 @@
   <label for="tab4">test</label>
     
   <section id="content1">
-    <p>
-       
-    </p>
-    <p>
-      Brisket meatball turkey short loin boudin leberkas meatloaf chuck andouille pork loin pastrami spare ribs pancetta rump. Frankfurter corned beef beef tenderloin short loin meatloaf swine ground round venison.
-    </p>
+      <div class="card-viewer">
+        <div class="cardholder">
+            <div class="toolbar">
+              <div class="toolbar__center">
+                <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
+              </div>
+            </div>
+            <div class="card-scroller">
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+            </div>
+        </div>
+        <div class="cardholder">
+            <div class="toolbar">
+              <div class="toolbar__center">
+                <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
+              </div>
+            </div>
+            <div class="card-scroller">
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+            </div>
+        </div>
+        <div class="cardholder">
+            <div class="toolbar">
+              <div class="toolbar__center">
+                <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
+              </div>
+            </div>
+            <div class="card-scroller">
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+              <div class="card card--material">
+                <img src="../../assets/img/dummy.jpg" class="card-image"/>
+                <div class="card__title card--material__title" >Card Title</div>
+                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              </div>
+            </div>
+        </div>
+    </div>
   </section>
     
   <section id="content2">
