--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,6 @@
     <button type="submit"><i class="fa fa-search"></i></button>
 </form><br>
 
-<<<<<<< HEAD
     <!-- <div class="tabbar tabbar--top tabbar--material">
         <label class="tabbar__item tabbar--material__item">
           <input type="radio" name="tabbar-material-a" checked="checked">
@@ -55,15 +54,13 @@
         </label>
     </div> -->
 
-=======
->>>>>>> origin/master
 <main>
   
   <input id="tab1" type="radio" name="tabs" checked>
   <label for="tab1">test</label>
     
   <input id="tab2" type="radio" name="tabs">
-  <label for="tab2"></label>
+  <label for="tab2">test</label>
     
   <input id="tab3" type="radio" name="tabs">
   <label for="tab3">test</label>
@@ -72,16 +69,7 @@
   <label for="tab4">test</label>
     
   <section id="content1">
-<<<<<<< HEAD
-    <p>
-      this 
-    </p>
-    <p>
-      Brisket meatball turkey short loin boudin leberkas meatloaf chuck andouille pork loin pastrami spare ribs pancetta rump. Frankfurter corned beef beef tenderloin short loin meatloaf swine ground round venison.
-    </p>
-=======
-    <app-cardholder></app-cardholder>
->>>>>>> origin/master
+      <app-cardholder></app-cardholder>
   </section>
     
   <section id="content2">
@@ -112,3 +100,6 @@
   </section>
     
 </main>
+
+
+<app-cardholder></app-cardholder>
