--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,119 +18,19 @@
   <label for="tab4">test</label>
     
   <section id="content1">
-      <div class="card-viewer">
-        <div class="cardholder">
-            <div class="toolbar">
-              <div class="toolbar__center">
-                <img src="../../assets/img/icons/facebook-icon.png" class="header-img"/>
-              </div>
-            </div>
-            <div class="card-scroller">
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-            </div>
-        </div>
-        <div class="cardholder">
-            <div class="toolbar">
-              <div class="toolbar__center">
-                <img src="../../assets/img/icons/instagram-icon.png" class="header-img"/>
-              </div>
-            </div>
-            <div class="card-scroller">
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-            </div>
-        </div>
-        <div class="cardholder">
-            <div class="toolbar">
-              <div class="toolbar__center">
-                <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
-              </div>
-            </div>
-            <div class="card-scroller">
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="card card--material">
-                <img src="../../assets/img/dummy.jpg" class="card-image"/>
-                <div class="card__title card--material__title" >Card Title</div>
-                <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-            </div>
-        </div>
-    </div>
+      <app-cardholder></app-cardholder>
   </section>
     
   <section id="content2">
-    <p>
-      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin ball tip turducken. Pork belly meatball t-bone bresaola tail filet mignon kevin turkey ribeye shank flank doner cow kielbasa shankle. Pig swine chicken hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger venison brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail short ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter meatball meatloaf, cow kevin pork pork loin venison fatback spare ribs salami beef ribs.
-    </p>
-    <p>
-      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
-    </p>
+    <app-cardholder></app-cardholder>
   </section>
     
   <section id="content3">
-    <p>
-      Bacon ipsum dolor sit amet beef venison beef ribs kielbasa. Sausage pig leberkas, t-bone sirloin shoulder bresaola. Frankfurter rump porchetta ham. Pork belly prosciutto brisket meatloaf short ribs.
-    </p>
-    <p>
-      Brisket meatball turkey short loin boudin leberkas meatloaf chuck andouille pork loin pastrami spare ribs pancetta rump. Frankfurter corned beef beef tenderloin short loin meatloaf swine ground round venison.
-    </p>
+    <app-cardholder></app-cardholder>
   </section>
     
   <section id="content4">
-    <p>
-      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin ball tip turducken. Pork belly meatball t-bone bresaola tail filet mignon kevin turkey ribeye shank flank doner cow kielbasa shankle. Pig swine chicken hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger venison brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail short ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter meatball meatloaf, cow kevin pork pork loin venison fatback spare ribs salami beef ribs.
-    </p>
-    <p>
-      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
-    </p>
+    <app-cardholder></app-cardholder>
   </section>
     
 </main>
