Modified fonts and added status bar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,8 @@
   <label for="tab4">test</label>
     
   <section id="content1">
-      <app-cardholder></app-cardholder>
+    <app-progressbar></app-progressbar>
+    <app-cardholder></app-cardholder>
   </section>
     
   <section id="content2">
