--- a/src/app/cardholder/cardholder.component.html
+++ b/src/app/cardholder/cardholder.component.html
@@ -1,6 +1,6 @@
 <div class="card-viewer">
     <div class="cardholder">
-        <div class="toolbar">
+        <div class="toolbar" style="background-color: rgba(59, 88, 151, 0.9)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/facebook-icon.png" class="header-img"/>
           </div>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="cardholder">
-        <div class="toolbar">
+        <div class="toolbar" style="background-color: rgba(222, 208, 192, 0.67)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/instagram-icon.png" class="header-img"/>
           </div>
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="cardholder">
-        <div class="toolbar">
+        <div class="toolbar"  style="background-color: rgba(0, 172, 235, 0.87)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
           </div>
