--- a/src/app/progressbar/progressbar.component.css
+++ b/src/app/progressbar/progressbar.component.css
@@ -1,6 +1,6 @@
 #percentage-bar {
     margin: 1em auto 2em;
-    height: 3em;
+    height: 2em;
     border-radius: 10px;
     background: linear-gradient(left, green, #FFEF00 30%, red);
 }
@@ -10,13 +10,13 @@
     text-align: center;
     vertical-align: middle;
     color: black;
-    top: 1em;
+    top: .2em;
 }
 
 .progress-bar__secondary {
     background: transparent;
     text-align: center;
     color: black;
-    top: 1em;
+    top: .2em;
     right: 0;
 }
