--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,6 @@
 </form><br>
 
 <main>
-  
     <input id="tab1" type="radio" name="tabs" checked>
     <label for="tab1">All News Threads</label>
   
@@ -23,14 +22,17 @@
   </section>
     
   <section id="content2">
+    <app-progressbar></app-progressbar>
     <app-cardholder></app-cardholder>
   </section>
     
   <section id="content3">
+    <app-progressbar></app-progressbar>
     <app-cardholder></app-cardholder>
   </section>
     
   <section id="content4">
+    <app-progressbar></app-progressbar>
     <app-cardholder></app-cardholder>
   </section>
     
