--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -24,7 +24,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-    width: 60%;
+    width: 100%;
     text-align: left;
 }
 
@@ -34,7 +34,7 @@ button[type=submit] {
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    background-color: white;
+    background-color: #ddd;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 15px 12px 15px;
