--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,15 @@
 .form-holder {
     display: flex;
     flex-direction: horizontal;
+    position: fixed;
     /* justify-content: center; */
     align-items: center;
-    padding-left: 12px;
+    justify-content: flex-end;
+    right: 0;
+    z-index: 5;
+    background-color: #bbb;
+    height: 5em;
+    width: 100vw;
 }
 
 input[type=text] {
@@ -24,7 +30,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-    width: 100%;
+    width: 93%;
     text-align: left;
 }
 
@@ -68,7 +74,7 @@ p {
 main {
   width: 100%;
   padding: 50px;
-  margin: 0 auto;
+  margin: 1em auto 0;
   background: #fff;
 }
 
