--- a/src/app/cardholder/cardholder.component.html
+++ b/src/app/cardholder/cardholder.component.html
@@ -1,5 +1,5 @@
 <div class="card-viewer">
-    <div class="cardholder">
+    <div class="card cardholder">
         <div class="toolbar" style="background-color: rgba(59, 88, 151, 0.9)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/facebook-icon.png" class="header-img"/>
@@ -27,7 +27,7 @@
           </div>
         </div>
     </div>
-    <div class="cardholder">
+    <div class="card cardholder">
         <div class="toolbar" style="background-color: rgba(222, 208, 192, 0.67)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/instagram-icon.png" class="header-img"/>
@@ -55,7 +55,7 @@
           </div>
         </div>
     </div>
-    <div class="cardholder">
+    <div class="card cardholder">
         <div class="toolbar"  style="background-color: rgba(0, 172, 235, 0.87)">
           <div class="toolbar__center">
             <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
