--- a/src/app/progressbar/progressbar.component.css
+++ b/src/app/progressbar/progressbar.component.css
@@ -1,8 +1,13 @@
+.progress-holder {
+    width: 50%;
+    margin-left: auto;
+    margin-bottom: 1em;
+}
+
 #percentage-bar {
-    margin: 1em auto 2em;
-    height: 2em;
-    border-radius: 10px;
-    background: linear-gradient(left, green, #FFEF00 30%, red);
+    height: 5px;
+    border-radius: 1px;
+    background: linear-gradient(left, #d3d3d3 , #a8a8a8 50%, #151515);
 }
 
 .progress-bar__primary {
@@ -10,13 +15,19 @@
     text-align: center;
     vertical-align: middle;
     color: black;
-    top: .2em;
+    top: .5em;
 }
 
 .progress-bar__secondary {
     background: transparent;
     text-align: center;
     color: black;
-    top: .2em;
+    top: .5em;
     right: 0;
+}
+
+@media screen and (max-width: 500px) {
+    .progress-holder {
+        width: 100%;
+    }
 }
