connected to backend

--- a/src/app/cardholder/cardholder.component.css
+++ b/src/app/cardholder/cardholder.component.css
@@ -7,7 +7,7 @@
   }
   
   .cardholder {
-    width: auto;
+    width: 40%;
     height: 500px;
     background-color: #c9c9c9;
     border-radius: 10px;
