--- a/src/app/progressbar/progressbar.component.css
+++ b/src/app/progressbar/progressbar.component.css
@@ -2,7 +2,7 @@
     margin: 1em auto 2em;
     height: 2em;
     border-radius: 10px;
-    background: linear-gradient(left, green, #FFEF00 30%, red);
+    background: linear-gradient(to right, green, #FFEF00 30%, red);
 }
 
 .progress-bar__primary {
