--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -20,7 +20,7 @@ input[type=text] {
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
     text-align: left;
-    display: inline;
+    display: inline-block;
     margin: 0 0;
 }
 
@@ -33,16 +33,15 @@ button[type=submit] {
     box-sizing: border-box;
     width: 50px;
     border: 2px solid #ccc;
-    border-radius: 4px;
     font-size: 16px;
-    background-color: #ddd;
+    background-color: #ccc;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
-    padding: 12px 15px 12px 15px;
+    padding: 15px 15px 15px 15px;
     -webkit-transition: width 0.6s ease-in-out;
     transition: width 0.6s ease-in-out;
     text-align: center;
-    display: inline;
+    display: inline-block;
     margin: 0 0;
 }
   
