--- a/src/app/cardholder/cardholder.component.css
+++ b/src/app/cardholder/cardholder.component.css
@@ -9,7 +9,7 @@
   .cardholder {
     width: 40%;
     height: 500px;
-    background-color: #c9c9c9;
+    background-color: whitesmoke;
     border-radius: 10px;
     overflow: hidden;
     margin: 0 1.5em;
@@ -47,7 +47,7 @@
   }
   
   .card {
-    background-color: #c4cfcf;
+    background-color: gainsboro;
     margin: 1em;
     padding: 1em;
   }
