--- a/src/app/cardholder/cardholder.component.html
+++ b/src/app/cardholder/cardholder.component.html
@@ -1,89 +1,9 @@
-<!-- <div class="card-viewer">
-    <div class="cardholder">
-        <div class="toolbar" style="background-color: rgba(59, 88, 151, 0.9)">
-          <div class="toolbar__center">
-            <img src="../../assets/img/icons/facebook-icon.png" class="header-img"/>
-          </div>
-        </div>
-        <div class="card-scroller">
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-        </div>
-    </div>
-    <div class="card cardholder">
-        <div class="toolbar" style="background-color: rgba(222, 208, 192, 0.67)">
-          <div class="toolbar__center">
-            <img src="../../assets/img/icons/instagram-icon.png" class="header-img"/>
-          </div>
-        </div>
-        <div class="card-scroller">
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-        </div>
-    </div>
-    <div class="card cardholder">
-        <div class="toolbar"  style="background-color: rgba(0, 172, 235, 0.87)">
-          <div class="toolbar__center">
-            <img src="../../assets/img/icons/twitter-icon.png" class="header-img"/>
-          </div>
-        </div>
-        <div class="card-scroller">
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-          <div class="card card--material">
-            <img src="../../assets/img/dummy.jpg" class="card-image"/>
-            <div class="card__title card--material__title" >Card Title</div>
-            <div class="card__content card--material__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          </div>
-        </div>
-    </div>
-</div> -->
+<div class="card progress-holder">
+  <div style="text-align: center; font-weight: bold">Talk of the Town:</div>
+  <p class="oned" style="display: inline-block">30% Positive</p>
+  <p class="twod" style="display: block; float: right;">70% Negative</p>
+  <div id="percentage-bar" class="progress-bar progress-bar--material"></div>
+</div>
 
 <div class="card-viewer">
 
