--- a/src/app/cardholder/cardholder.component.css
+++ b/src/app/cardholder/cardholder.component.css
@@ -76,3 +76,39 @@
   ::-webkit-scrollbar-thumb:hover {
     background: rgba(0,0,0,.7);
   }
+
+  .progress-holder {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1em;
+}
+
+#percentage-bar {
+    height: 5px;
+    border-radius: 1px;
+    background: linear-gradient(left, #03244d, #a8a8a8 70%, #dd550c);
+}
+
+.progress-bar__primary {
+    background: transparent;
+    text-align: center;
+    vertical-align: middle;
+    color: black;
+    top: .2em;
+    z-index: 0;
+}
+
+.progress-bar__secondary {
+    background: transparent;
+    text-align: center;
+    color: black;
+    top: .5em;
+    right: 0;
+}
+
+@media screen and (max-width: 500px) {
+    .progress-holder {
+        width: 100%;
+    }
+}
